--- a/src/styles/components/Gallery.scss
+++ b/src/styles/components/Gallery.scss
@@ -1,14 +1,14 @@
-.GalleryBox{
+.GalleryBox {
   z-index: 5;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow: none;
 }
-.Gallery{
+.Gallery {
   border: 4px solid white;
   border-radius: 5px;
   width: 800px;
@@ -18,12 +18,12 @@
   text-align: center;
   position: relative;
 }
-.Gallery img{
+.Gallery img {
   height: 380px;
   margin: 0 auto;
-  max-height: 380px
+  max-height: 380px;
 }
-.Gallery .explanation{
+.Gallery .explanation {
   color: black;
   text-align: justify;
   font-size: 12px;
@@ -31,10 +31,10 @@
   line-height: 16px;
   padding: 10px 15px;
 }
-.Gallery .caption{
+.Gallery .caption {
   color: #000;
 }
-.close-x{
+.close-x {
   color: red;
   font-size: 25px;
   position: absolute;
