--- a/src/styles/components/Gallery.scss
+++ b/src/styles/components/Gallery.scss
@@ -9,36 +9,41 @@
   overflow: none;
 }
 .Gallery {
-  border: 4px solid white;
-  border-radius: 5px;
+  border-radius: 8px;
   width: 800px;
   margin: 0 auto;
   margin-top: 50px;
-  background-color: white;
+  background-color: #e9e9e9;
   text-align: center;
   position: relative;
+  padding: 25px;
+}
+.Gallery .title {
+  font-size: 30px;
+  color: #444;
+  margin-bottom: 10px;
 }
 .Gallery img {
   height: 380px;
   margin: 0 auto;
   max-height: 380px;
 }
-.Gallery .explanation {
-  color: black;
-  text-align: justify;
-  font-size: 12px;
-  margin-top: 10px;
-  line-height: 16px;
-  padding: 10px 15px;
-}
 .Gallery .caption {
-  color: #000;
+  color: #aaa;
+  font-size: 14px;
+}
+.Gallery .explanation {
+  color: #666;
+  text-align: justify;
+  font-size: 15px;
+  margin-top: 30px;
+  line-height: 22px;
 }
 .close-x {
-  color: red;
-  font-size: 25px;
+  color: #e9e9e9;
+  font-size: 35px;
   position: absolute;
-  top: -10px;
-  right: -28px;
+  top: -12px;
+  right: -35px;
   cursor: pointer;
 }
