--- a/src/styles/components/Highlight.scss
+++ b/src/styles/components/Highlight.scss
@@ -6,10 +6,10 @@
   font-family: "Helvetica";
   text-align: center;
   color: #fff;
-  margin: 0 auto 10px;
+  margin: 25px auto 10px;
 }
 .Highlight {
-  width: 50%;
+  width: 1000px;
   margin: 0 auto;
   padding: 10px;
   border: 1px solid #fff;
@@ -22,17 +22,23 @@
 }
 .Highlight img {
   width: 100%;
-  height: 320px;
+  height: 100%;
   object-fit: cover;
 }
 .Highlight .date {
   z-index: 2;
   position: absolute;
-  top: 19px;
-  right: 20px;
+  top: 14px;
+  right: 15px;
   font-size: 10px;
   color: pink;
+  padding: 5px 12px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.25);
 }
-.ClickableArea {
-  padding: 25px;
+
+@media only screen and (max-width: 1050px) {
+  .Highlight {
+    width: 95%;
+  }
 }
