--- a/src/styles/components/Search.scss
+++ b/src/styles/components/Search.scss
@@ -1,50 +1,32 @@
-.SearchBox{}
-.Search{
-  margin: 25px auto 25px;
+.Search {
+  margin: 25px auto 0;
   text-align: center;
 }
-input[type='date']{
-  width: 154px;
-  height: 35px;
+input[type="date"] {
+  width: 180px;
+  height: 42px;
   margin: 0 auto;
   font-family: arial, sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
-  background-color: #959595;
+  background-color: #567aa5;
   outline: none;
   border: 0;
   border-radius: 3px;
-  padding: 0 3px;
+  padding: 0 8px;
   color: #fff;
+  padding-top: 4px;
 }
-input[type="date"]::-webkit-datetime-edit-month-field{
-  color: red;
-}
-input[type="date"]::-webkit-datetime-edit-day-field{
-  color: white;
-}
-input[type="date"]::-webkit-datetime-edit-year-field{
-  color: blue;
-}
-input[type="date"]::-webkit-clear-button{
-  font-size: 18px;
-  height: 30px;
-  position: relative;
-  right: 5px;
-  margin-right: 4px;
-}
-input[type="date"]::-webkit-inner-spin-button{
+input[type="date"]::-webkit-inner-spin-button {
   height: 30px;
 }
-input[type="date"]::-webkit-calendar-picker-indicator{
+input[type="date"]::-webkit-calendar-picker-indicator {
   font-size: 18px;
+  padding-top: 0px;
 }
-input[type="date"]::-webkit-calendar-picker-indicator:hover{
-  background-color: #959595;
-  color: #e6e6e6;
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  background-color: #567aa5;
+  color: #fff;
   cursor: pointer;
-}
-input[type="date"]::-webkit-calendar-picker-indicator:active{
-  color: blue;
 }
