--- a/src/styles/components/Gallery.scss
+++ b/src/styles/components/Gallery.scss
@@ -60,7 +60,14 @@
 }
 @media only screen and (max-width: 600px) {
   .Gallery {
-    width: calc(100% - 90px);
-    margin: 20px auto;
+    width: calc(100% - 20px);
+  }
+  .close-x {
+    color: #e9e9e9;
+    font-size: 35px;
+    position: absolute;
+    top: -50px;
+    right: calc(50% - 13px);
+    cursor: pointer;
   }
 }
