--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,16 +29,12 @@ hr {
 }
 .fancy-button {
   padding: 10px 20px 8px;
-  background-color: #8ba6ca;
+  background-color: #567aa5;
   margin: 40px auto 0;
-  border: 1px solid #4773aa;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
-  color: #222;
-}
-.fancy-button:hover {
-  background-color: #4773aa;
-  color: white;
+  color: #fff;
 }
 footer {
   margin-top: 30px;
