--- a/src/styles/components/Highlight.scss
+++ b/src/styles/components/Highlight.scss
@@ -1,3 +1,10 @@
+.Loading {
+  height: 454px;
+  line-height: 454px;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
 .HighlightBox {
   margin: 0px auto 50px;
 }
