--- a/src/styles/components/Carousel.scss
+++ b/src/styles/components/Carousel.scss
@@ -38,6 +38,9 @@
   right: 5px;
   font-size: 10px;
   color: pink;
+  padding: 5px 12px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 @media only screen and (max-width: 1250px) {
