--- a/src/styles/components/Gallery.scss
+++ b/src/styles/components/Gallery.scss
@@ -11,7 +11,7 @@
 .Gallery {
   border-radius: 8px;
   width: 800px;
-  margin: 50px auto 20px;
+  margin: 50px auto;
   background-color: #e9e9e9;
   text-align: center;
   position: relative;
@@ -28,7 +28,7 @@
   max-height: 380px;
 }
 .Gallery .caption {
-  color: #aaa;
+  color: #888;
   font-size: 14px;
 }
 .Gallery .explanation {
@@ -42,9 +42,11 @@
   color: #e9e9e9;
   font-size: 35px;
   position: absolute;
-  top: -12px;
-  right: -35px;
   cursor: pointer;
+  width: 100px;
+  text-align: center;
+  top: -50px;
+  right: calc(50% - 50px);
 }
 
 @media only screen and (max-width: 900px) {
@@ -61,13 +63,5 @@
 @media only screen and (max-width: 600px) {
   .Gallery {
     width: calc(100% - 20px);
-  }
-  .close-x {
-    color: #e9e9e9;
-    font-size: 35px;
-    position: absolute;
-    top: -50px;
-    right: calc(50% - 13px);
-    cursor: pointer;
   }
 }
